html troca link pro bg

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-  
+
   <div class="container">
     <h1 class="page-title">
       Mentalista
     </h1>    
   </div>
   <div>
-    <img src="https://caelum-online-public.s3.amazonaws.com/assets-imersaodev/Ilustra%C3%A7%C3%A3o-c%C3%A9rebro+1.png">
+    <img src="./assets/ilustracao_cerebro.png">
   </div>
 
   <script src="./js/app.js"></script>  
