--- a/index.html
+++ b/index.html
@@ -16,8 +16,15 @@
   </div>
   <div>
     <img src="./assets/ilustracao_cerebro.png">
-  </div>
-
-  <script src="./js/app.js"></script>  
+  </div>  
+  <script>
+    //setTimeOut inserido para não abrir o prompt assim que carrega e dar tempo de acionar o console caso queira monitorar os testes
+    setTimeout(() => {
+    const src = document.createElement("script")
+    src.src = "./js/app.js"
+    document.body.appendChild(src)
+  }, 4000);
+  </script>
+  
 </body>
 </html>
